force-app/main/default/objects/Event_Registration__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendee Lookup</relationshipLabel>
    <relationshipName>AttendeeLookup</relationshipName>
    <type>Lookup</type>
</CustomField>