force-app/main/default/objects/Event_Registration__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <label>Attendee Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>