force-app/main/default/objects/Event_Registration__c/fields/Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Registration_Source__c</fullName>
    <label>Registration Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>