force-app/main/default/objects/Event_Registration__c/fields/Special_Requests_Long_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests_Long_Text_Area__c</fullName>
    <label>Special Requests (Long Text Area).</label>
    <length>120</length>
    <type>Text</type>
</CustomField>